# pankosmia-rag-chat

./: .gitignore  Cargo.toml  README.md
doc/: ollama_prompt.md
src/: lib.rs  main.rs  mod.rs  process.rs  prompt.rs
test_data/JHN/ch_3/: v16.json
